examples/test/testpolicy1610.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1610
  namespace: namespace68
spec:
  podSelector:
    matchLabels:
      key4: value48
      key37: value12
      key27: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value34
          key20: value13
      podSelector:
        matchLabels:
          key2: value10
          key12: value0
